# ayleio

./: README.md  README_AF.md  README_AR.md  README_EN.md  README_HI.md  README_JA.md  README_KO.md  README_RU.md  README_TH.md  README_zh-CN.md  package.yaml
package/ayleio/: .flutter-plugins-dependencies  README.md  pubspec.yaml
package/ayleio/lib/: ayleio.dart
package/ayleio/lib/core/: core.dart
package/ayleio/lib/dart/core/media_universe/: media_kit_fork.dart
package/ayleio/lib/dart/core/media_universe/ffi/: README.txt
package/ayleio/lib/dart/core/media_universe/ffi/src/: allocation.dart  arena.dart  utf16.dart  utf8.dart
package/ayleio/lib/dart/core/media_universe/src/: legacy.dart  media_kit_fork.dart  values.dart
package/ayleio/lib/dart/core/media_universe/src/models/: audio_device.dart  audio_params.dart  playable.dart  player_log.dart  player_state.dart  player_stream.dart  playlist.dart  playlist_mode.dart  track.dart  video_params.dart
package/ayleio/lib/dart/core/media_universe/src/models/media/: media.dart  media_native.dart  media_web.dart
package/ayleio/lib/dart/core/media_universe/src/player/: platform_player.dart  player.dart
package/ayleio/lib/dart/core/media_universe_video/: media_kit_video_fork.dart
package/ayleio/lib/dart/core/media_universe_video/media_kit_video_controls/: media_kit_video_controls.dart
package/ayleio/lib/dart/core/media_universe_video/media_kit_video_controls/src/controls/: adaptive.dart  cupertino.dart  material.dart  material_desktop.dart  no.dart
package/ayleio/lib/dart/core/media_universe_video/src/: video_view_parameters.dart
package/ayleio/lib/dart/core/media_universe_video/src/subtitle/: subtitle_view.dart
package/ayleio/lib/dart/core/media_universe_video/src/utils/: dispose_safe_notifer.dart  query_decoders.dart  wakelock.dart
package/ayleio/lib/dart/core/media_universe_video/src/video/: video.dart  video_texture.dart  video_web.dart
package/ayleio/lib/dart/core/media_universe_video/src/video_controller/: platform_video_controller.dart  video_controller.dart
package/ayleio/lib/dart/core/media_universe_video/src/video_controller/android_video_controller/: android_video_controller.dart  real.dart  (+1 more)
package/ayleio/lib/package/safe_local_storage/lib/: file_system.dart  safe_local_storage.dart
package/ayleio/lib/package/synchronized/lib/: extension.dart  synchronized.dart
package/ayleio/lib/package/synchronized/lib/src/: basic_lock.dart  extension_impl.dart  lock_extension.dart  multi_lock.dart  reentrant_lock.dart
package/ayleio/lib/package/uri_parser/lib/: uri_parser.dart
package/ayleio/lib/utils/: utils.dart
package/ayleio/lib/uuid/: uuid.dart
package/ayleio_flutter/: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
package/ayleio_flutter/android/: build.gradle  settings.gradle
package/ayleio_flutter/android/src/main/: AndroidManifest.xml
package/ayleio_flutter/example/: README.md
package/ayleio_flutter/ios/: ayleio_flutter.podspec
package/ayleio_flutter/ios/Classes/: ayleio_flutter.c
package/ayleio_flutter/lib/: ayleio_flutter.dart
package/ayleio_flutter/linux/: CMakeLists.txt  ayleio_flutter.cc  texture_gl.cc  texture_sw.cc  utils.cc  video_output.cc  video_output_manager.cc
package/ayleio_flutter/linux/include/ayleio_flutter/: ayleio_flutter.h  texture_gl.h
package/ayleio_flutter/macos/: ayleio_flutter.podspec
quickstart/: README.md  pubspec.yaml
quickstart/example/: README.md
(+38 files in other folders)
